exports[`Scrolex _defaults should default according to the snapshot 1`] = `
Object {
  "addCommandAsComponent": false,
  "announce": false,
  "cbPreLinefeed": [Function],
  "cleanupTmpFiles": true,
  "components": "a>b>c",
  "cwd": "/tmp",
  "dryrun": false,
  "fatal": false,
  "indent": 4,
  "interval": 80,
  "mode": "singlescroll",
  "shell": false,
  "tmpFiles": false,
}
`;

exports[`Scrolex _normalizeOpts should normalize according to the snapshot 1`] = `
Object {
  "components": Array [
    "a",
    "b",
    "c",
  ],
  "indent": 0,
  "mode": "singlescroll",
}
`;

exports[`ScrolexExports exe should accept async/await 1`] = `
"

    Starting with limit=1, interval=1000, errorOut=true
    Doing thing 1. fakecmd with limit=1, interval=1000, errorOut=true done.

. Fault while executing \"MOCK_ERROR_OUT=1 MOCK_LIMIT=1 node #{SCROLEX_ROOT}/src/fakecmd.js\". Exit code: 1"
`;

exports[`ScrolexExports exe should accept async/await 2`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`ScrolexExports exe should accept async/await 3`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`ScrolexExports exe should accept async/await 4`] = `
"Starting with limit=2, interval=1000, errorOut=false
Doing thing 1
Doing thing 2. fakecmd with limit=2, interval=1000, errorOut=false done."
`;

exports[`ScrolexExports exe should accept async/await and catch an error 1`] = `
[Error: 

    Starting with limit=1, interval=1000, errorOut=true
    Doing thing 1. fakecmd with limit=1, interval=1000, errorOut=true done.

. Fault while executing "MOCK_ERROR_OUT=1 MOCK_LIMIT=1 node #{SCROLEX_ROOT}/src/fakecmd.js". Exit code: 1]
`;
